--- a/My dreams.html
+++ b/My dreams.html
@@ -17,11 +17,11 @@
 <li>I dream setting up an electronic shop cosisting of many service derivery points such as; 
     <ul>
         <li>selling of all types of phones and their accessories,</li>
-        <img src="" alt="">
+        <img src="images/phones.jpg" alt="" width="220px" height="220px">
         <li>Tvs and laptops of all types and sizes,</li>
-        <img src="" alt="">
+        <img src="images/tvs and laptops.jpg" alt=""  width="220px" height="220px">
         <li>whoofers and disco equipments,</li>
-        <img src="" alt="">
+        <img src="images/whoofers.jpg" alt=""  width="220px" height="220px">
     </ul>
     <p>Employing many workers in these businesses at different level such as;
         <ul>
