Update My academics .html

--- a/My academics .html
+++ b/My academics .html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EDUCATION.</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <H1>ALL IN  MY ACADEMIC JOURNEY.</H1>
@@ -12,16 +13,20 @@
     <p>Among these schools; l have been to adventist shools and other schools such as;
         <ol>
             <li>Light junior school kitoma.</li>
-            primary level.
+           <p>primary level.</p>
+           <img src="images/kitoma.jpg" alt="">
             <li>Victorious college Bugema.</li>
-            lower secondary level
+            <p>lower secondary level</p>
+            <img src="images/victorious.jpg" alt="">
             <li>Mateete Comprehensive seed secondary school.</li>
-            Junior secondary level.
+            <p>Junior secondary level.</p>
+            <img src="images/mateete comp.jpg" alt="">
             <li>Barbra hill secondary.</li>
-            upper secondary level
+             <p>upper secondary level</p>
+             <img src="images/barbra hill.jpg" alt="">
             <li>Najjanankumbi young christian school.</li>
-            Advanced level of learning"A"level.
-
+            <p>Advanced level of learning"A"level.</p>
+            <img src="images/Najjanankumbi young christian.jpg" alt="">
              </ol>
              and many others.
     </p>
