Update My roll models.html

--- a/My roll models.html
+++ b/My roll models.html
@@ -8,15 +8,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body style="background:GREEN;">
- <div class="colon"> <H1>THESE MAKE MY DREAMS GROW BIGGER EACH DAY AS THEY SUCCEED</H1>
-  <P>For any one to achieve bigger plans in life,
-       there must be driving agents that escort him or her and in this, these people have played a vital role in my modelling up as someone also useful to my entire society and 
+ <div class="colon"> <H1 style="background-color: maroon;">THESE MAKE MY DREAMS GROW BIGGER EACH DAY AS THEY SUCCEED</H1>
+  <P style="background-color: white;">For any one to achieve bigger plans in life,
+       there must be driving agents that escort him or her and in this,
+       these people have played a vital role in my modelling up as someone also useful to my entire society and 
       the people l live/ reside with in person.</P>
-      <p>At first, l never thourht of any one to ever influence my life and there fore l lived on my one and l was a roll moodel to my own self untill when l came to learn in life that its from those we admire that we take particular steps to success that w need to male each day coz there there are people already in the differrent future that wqe long and hope to be in,
+      <p style="background-color: white;">At first, l never thourht of any one to ever influence my life and there fore l lived on my one and l was a roll moodel to my own self untill when l came to learn in life that its from those we admire that we take particular steps to success that w need to male each day coz there there are people already in the differrent future that wqe long and hope to be in,
           there fore l decided to formulate my own areas of interest and have different personalities of great influence and therefore, these have really made a great bigup towards my general makeup and actegorically, they can be categorised differently such as the following;
       </p>
       <ul>
-        <p>Role models in music include;</p>  
+        <p style="background-color: maroon;">Role models in music include;</p>  
         <li>David Lutalo</li>
         <img src="IMAGES/david lutalo.jpg" alt="" width="200px", height="200px">
         <P>He has inspired me so much most especially in the music industry with his teaching and morally edifying songs;</p>
@@ -57,6 +58,7 @@
                  <p>Indeed the above gives me courage ever one day to stand end lead my people to a common unified goal and a well established and harmmonised society favourable and worthy living in for every body.</p>
                  <p>Rich men role models;</p>
                  <li>Bill Gates;</li>
+                 <img src="images/bill.gates.jpg" alt="">
                  <p>Ever stood as world's greatest, l like his identrity as a son of a wood cutter to a high pitch by struggle personal hustle.</p>
                  <p>Whenever l see and hear about such men, it gives me courage that all things are possible and"BEFORE ONE DIES, ONE SHOULD NEVER REGRATE IN LIFE".</p>
             </p>
