Update Compiled story .html

--- a/Compiled story .html
+++ b/Compiled story .html
@@ -21,6 +21,9 @@
   <img src="images/happy family.jpg" alt="" width="200px" height="200px">
   <p>visiting my friends and relatives as well,</p>
   <img src="images/papa and mama.jpg" alt="" width="200px" height="200px">
+  <p>Listening to the best message encrypted into the living voices by the compiler of all the read through message so as to make change and meaning to society well as to the political, spiritual and menta/psychological well being of my people..</p>
+  <audio src="AUDIO/BIGAMBIBWA BANANSI.mp3">political message.</audio>
+  <audio src="AUDIO/SINNER MIXXX.mp3">spiritual message.</audio>
    <li><a href="cover page.html" class="li-li">COVER PAGE.</a></li>
 </body>
 </html>
