Update My academics .html

--- a/My academics .html
+++ b/My academics .html
@@ -30,6 +30,6 @@
              </ol>
              and many others.
     </p>
-    <li><a href="My roll models.html" class="li-li">ROLE MODELS.</a></li>
+    <li><a href="Behind my course.html" class="li-li">WHY COMPUTING...</a></li>
 </body>
 </html>
