--- a/My dreams.html
+++ b/My dreams.html
@@ -26,40 +26,41 @@
     <p>Employing many workers in these businesses at different level such as;
         <ul>
             <p><li>marketiers</li></p>
-            <img src="IMAGES/market.jpg" alt="">
+            <img src="IMAGES/market.jpg" alt="" width="220px" height="220px">
             <p><li>sales men and women</li></p>
-            <img src="IMAGES/sales.jpg" alt="">
+            <img src="IMAGES/sales.jpg" alt="" width="220px" height="220px">
             <p><li>cooriers and deliverers</li></p>
-            <img src="IMAGES/coolier2.jpg" alt="">
+            <img src="IMAGES/coolier2.jpg" alt="" width="220px" height="220px">
         </ul>
     </p>
     <li>Building a nice manssion and setting up a beautiful home,</li>
    <p>It should be such a nice home in the village sorrounded by trees and beautiful scenary</p> 
    <p>l dream of a good and nice compound with shades and nice trees.</p>
-    <img src="IMAGES/My house.jpg" alt="" width="500px", height="500px">
+    <img src="IMAGES/My house.jpg" alt="" width="200px", height="200px">
     <p>Or a house like this one;</p>
-    <img src="IMAGES/another house.jpg" alt="" width="500px", height="500px">
+    <img src="IMAGES/another house.jpg" alt="" width="200px", height="200px">
     <p>Setting up a home farm "chicken house"</p>
-        <img src="IMAGES/chicken.jpg" alt="" width="300px", height="300px">
+        <img src="IMAGES/chicken.jpg" alt="" width="200px", height="200px">
        <p>animal grazing;</p>
-        <img src="IMAGES/animal farm.jpg" alt="" width="300px", height="300px">
+        <img src="IMAGES/animal farm.jpg" alt="" width="200px", height="200px">
     </p>
 </li>
 <li><p>Marrying a beautiful wife like this one;</p>
-    <img src="IMAGES/woman.jpg" alt="" width="230px", height="230px">
+    <img src="IMAGES/woman.jpg" alt="" width="200px", height="200px">
     <p>having good children like these ones;</p>
-    <img src="IMAGES/children.jpg" alt="" width="230px", height="230px">
+    <img src="IMAGES/children.jpg" alt="" width="200px", height="200px">
     <p>a health family like this one;</p>
-    <img src="IMAGES/happy family.jpg" alt="" width="230px", height="230px">
+    <img src="IMAGES/happy family.jpg" alt="" width="200px", height="200px">
 </li>
-<li><p>owning posh cars like;</p>
-    <p><img src="images/mercedes.jpg" alt=""width="220px", height="220px">
-    <img src="images/truck o1.jpg" alt="" width="220px", height="220px"></p>
-    <p><img src="images/truck 2.jpg" alt="" width="220px", height="220px">
-    <img src="IMAGES/first car.jpg" alt="" width="220px", height="220px"></p>
+<li>
+    <p>owning posh cars like;</p>
+    <p><img src="images/mercedes.jpg" alt="" width="200px", height="200px">
+    <img src="images/truck o1.jpg" alt="" width="200px", height="200px"></p>
+    <p><img src="images/truck 2.jpg" alt="" width="200px", height="200px">
+    <img src="IMAGES/first car.jpg" alt="" width="200px", height="200px"></p>
 </li>
 <li>Doing consultation work to help young people and other interested personels improve their life individually and even their surbodinates,</li>
-<img src="IMAGES/at my father's home.jpg" alt=""  width="220px", height="220px">
+<img src="IMAGES/at my father's home.jpg" alt=""  width="200px", height="200px">
 </ul>
 </div>
     <a href="Compiled story .html" class="li-li">I HAND YOU TO MY COMPILED STORY.</a>
