--- a/my background.html
+++ b/my background.html
@@ -12,34 +12,34 @@
    <H1><marquee>MY HISTORICAL BACKGROUND IS BRIEF....... </marquee></H1>
    <H1><marquee>SCONDLY IT'S PRECISE AND NOT VERY LONG .......</marquee></H1>
    <H1><marquee> BUT VERY HARD TO BELIEVE FOR A LAY PERSON......</marquee></H1>
-    <P>I was born on the 22nd of february, 2000. my home district of origin is Sssembabule-mawogola greater masaka
+    <P>I was born on the 22nd-02-2000. my home district of origin is Sssembabule-mawogola greater masaka
         proudly a muganda and l love my king of Buganda.
     </P>
         <img src="images/king.jpg" alt="" width="150px" style="text-align:center;">
     <p>To begin with, on the poin of buganda and a muganda well as proudly supportive, we have the following clans in Buganda;
         <ol>
             <li>Engabi clan</li>
-             <a href="IMAGES/Engabi.jpg">see</a>
+             <a href="IMAGES/Engabi.jpg">"click here".</a>
             <li>Ente clan</li>
-            <a href="IMAGES/Ente.jpg">see.</a>
+            <a href="IMAGES/Ente.jpg">"click here".</a>
             <li>Omusu clan</li>
-            <a href="IMAGES/omusu.jpg">see.</a>
+            <a href="IMAGES/omusu.jpg">"click here".</a>
             <li>Enkima clan</li>
-            <a href="IMAGES/Enkima.jpg">see.</a>
+            <a href="IMAGES/Enkima.jpg">"click here".</a>
             <li>Endiga clan</li>
-            <a href="IMAGES/ndiga2.jpg">see.</a>
+            <a href="IMAGES/ndiga2.jpg">"click here".</a>
             <li>Engeye clan</li>
-           <a href="IMAGES/Engeye.jpg">see.</a>
+           <a href="IMAGES/Engeye.jpg">"click here".</a>
             <li>Emmamba clan</li>
-            <a href="IMAGES/Mmamba.jpg">see.</a>
+            <a href="IMAGES/Mmamba.jpg">"click here".</a>
             <li>Empologoma clan</li>
-            <a href="IMAGES/Empologoma.jpg">see.</a>
+            <a href="IMAGES/Empologoma.jpg">"click here".</a>
             <li>Effumbe clan</li>
-            <a href="IMAGES/Effumbe.jpg">see.</a>
+            <a href="IMAGES/Effumbe.jpg">"click here".</a>
             <li>Enjovu clan</li>
-            <a href="IMAGES/Enjovu.jpg">see.</a>
+            <a href="IMAGES/Enjovu.jpg">"click here".</a>
             <li>Kinyomo clan</li>
-            <a href="IMAGES/kinyomo.jpg">see.</a>
+            <a href="IMAGES/kinyomo.jpg">"click here".</a>
         </ol>
     </p>
     <p>on the other hand, am brought up by a beatiful family as shown below;</p>
