--- a/dedication.html
+++ b/dedication.html
@@ -20,9 +20,9 @@
         <li>My beloved teacher, Madam Veronica Obiri</li>
         <li>my beloved teacher/lecturer,mentor,parent, mr.Kyaminyawandi Benjamini.</li>
         <p style="background-color: green;">my relatives and friends in this academic journey such as;</p>
-        <li>brother Sserugga owen paul</li>
+        <li>brother in crime and all seasons Sserugga owen paul</li>
         <img src="images/owen.jpg" alt="" width="100px" height="100px">
-        <li>Nangoobi Majorine</li>
+        <li>Joreen-one in crime</li>
         <img src="images/trinity.jpg" alt="" width="100px" height="100px">
         <li>brother Sserwanga Dennis</li>
         <img src="images/dennis.jpg" alt="" width="100px" height="100px">
