--- a/appreciation.html
+++ b/appreciation.html
@@ -16,6 +16,7 @@
     <ol>
         <li> Mr.Ngobya David with my beloved mum and family,</li>
         <li> Mr.Zinunula Samuel Iga and family</li>
+        <li>Karuhanga Julius-taata david.</li>
         All the entire Late Kitwaala family and above all i can't forget my beloved teachers, mentors, advisers,friends and
         all
         that have been so well to me may the living Lord reward you greatly in the name of the almighty son Jesus Christ.
